Initial version of collating photometry into one table per target

--- a/collate_data.ipynb
+++ b/collate_data.ipynb
@@ -7,6 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from astropy.coordinates import SkyCoord\n",
+    "from astropy.coordinates.name_resolve import NameResolveError\n",
+    "from astropy.table import Table, vstack\n",
+    "from astropy.time import Time\n",
+    "\n",
     "from pathlib import Path\n",
     "\n",
     "import pickle"
@@ -38,49 +43,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
+   "id": "7680671b-28fa-4910-b471-a5f4f85bfbb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try: \n",
+    "    with open('data/coords.pickle', 'rb') as coords_file:\n",
+    "        coords = pickle.load(coords_file)\n",
+    "except FileNotFoundError:\n",
+    "    coords = {}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb22e006-6105-41ab-bd0b-a9c2f113bb42",
+   "metadata": {},
+   "source": [
+    "To do:\n",
+    "- Take account of flags\n",
+    "- Calibration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "28ababc2-2d96-4505-99ef-fbbcaad05afe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'HD38451', 'band': 'B', 'exp': '15', 'timestamp': ['2021', '10', '10', '01', '30', '26']}\n",
-      "{'name': 'HD38451', 'band': 'B', 'exp': '20', 'timestamp': ['2021', '10', '10', '01', '30', '45']}\n",
-      "{'name': 'HD38451', 'band': 'V', 'exp': '10', 'timestamp': ['2021', '10', '10', '01', '31', '16']}\n",
-      "{'name': 'HD38451', 'band': 'V', 'exp': '15', 'timestamp': ['2021', '10', '10', '01', '31', '30']}\n",
-      "{'name': 'HD38451', 'band': 'R', 'exp': '10', 'timestamp': ['2021', '10', '10', '01', '31', '59']}\n",
-      "{'name': 'HD38451', 'band': 'I', 'exp': '20', 'timestamp': ['2021', '10', '10', '01', '32', '23']}\n",
-      "{'name': 'HD38451', 'band': 'I', 'exp': '25', 'timestamp': ['2021', '10', '10', '01', '32', '47']}\n",
-      "{'name': 'HD38451', 'band': 'B', 'exp': '15', 'timestamp': ['2021', '10', '10', '04', '10', '06']}\n",
-      "{'name': 'HD38451', 'band': 'B', 'exp': '20', 'timestamp': ['2021', '10', '10', '04', '10', '25']}\n",
-      "{'name': 'HD38451', 'band': 'V', 'exp': '10', 'timestamp': ['2021', '10', '10', '04', '10', '56']}\n",
-      "{'name': 'HD38451', 'band': 'V', 'exp': '15', 'timestamp': ['2021', '10', '10', '04', '11', '10']}\n",
-      "{'name': 'HD38451', 'band': 'R', 'exp': '10', 'timestamp': ['2021', '10', '10', '04', '11', '39']}\n",
-      "{'name': 'HD38451', 'band': 'I', 'exp': '20', 'timestamp': ['2021', '10', '10', '04', '12', '02']}\n",
-      "{'name': 'HD38451', 'band': 'I', 'exp': '25', 'timestamp': ['2021', '10', '10', '04', '12', '26']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_dates = [p for p in DATA_PATH.glob('202?_??_??') if p not in processed_dates]\n",
-    "for date in new_dates[:10]:\n",
+    "obs_tables = {}\n",
+    "for date in new_dates:\n",
     "    for catalogue in date.glob('Catalogues/*_anm83_*.cat'):\n",
     "        obs_meta = catalogue.stem.split('_')\n",
     "        obs_meta = {\n",
     "            'name': obs_meta[5],\n",
     "            'band': obs_meta[7][0],\n",
     "            'exposure': obs_meta[7][1:],\n",
-    "            'timestamp': obs_meta[9:15],\n",
+    "            'timestamp': Time(\n",
+    "                dict(zip(\n",
+    "                    ['year', 'month', 'day', 'hour', 'minute', 'second'],\n",
+    "                    map(int, obs_meta[9:15])\n",
+    "                )),\n",
+    "                format='ymdhms',\n",
+    "            ).jd,\n",
     "        }\n",
-    "        print(obs_meta)\n",
+    "        if obs_meta['name'] not in coords:\n",
+    "            try:\n",
+    "                coords[obs_meta['name']] = SkyCoord.from_name(obs_meta['name'], parse=True)\n",
+    "            except NameResolveError:\n",
+    "                continue\n",
+    "        \n",
+    "        table = Table.read(catalogue, format='ascii.sextractor')\n",
+    "        table.rename_column('ALPHA_J2000', 'RA')\n",
+    "        table.rename_column('DELTA_J2000', 'Dec')\n",
+    "        \n",
+    "        table['separation'] = SkyCoord.guess_from_table(table).separation(coords[obs_meta['name']])\n",
+    "        table.sort('separation')\n",
+    "        \n",
+    "        for key, val in obs_meta.items():\n",
+    "            table[key] = val\n",
+    "        \n",
+    "        if obs_meta['name'] not in obs_tables:\n",
+    "            try:\n",
+    "                obs_tables[obs_meta['name']] = Table.read(f\"data/{obs_meta['name']}.ecsv\")\n",
+    "            except FileNotFoundError:\n",
+    "                obs_tables[obs_meta['name']] = table[0]\n",
+    "                continue\n",
+    "        obs_tables[obs_meta['name']] = vstack([obs_tables[obs_meta['name']], table[0]])\n",
+    "        \n",
     "    processed_dates.append(date)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "id": "03cc5012-89c8-4a60-99cd-38db9312a047",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name, table in obs_tables.items():\n",
+    "    table.write(f\"data/{name}.ecsv\", overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "27e2fe8f-c6c6-454d-ac97-460fc5c9fdb7",
    "metadata": {},
    "outputs": [],
@@ -91,11 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "704b847a-dbc3-4fc2-8ce4-ecf1fe1c6dab",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('data/coords.pickle', 'wb') as coords_file:\n",
+    "    pickle.dump(coords, coords_file)"
+   ]
   }
  ],
  "metadata": {
