Calculate and plot calibrated magnitudes

--- a/collate_data.ipynb
+++ b/collate_data.ipynb
@@ -9,8 +9,15 @@
    "source": [
     "from astropy.coordinates import SkyCoord\n",
     "from astropy.coordinates.name_resolve import NameResolveError\n",
-    "from astropy.table import Table, vstack\n",
+    "from astropy.table import Table, Row, vstack, unique, hstack\n",
     "from astropy.time import Time\n",
+    "from astropy import units as u\n",
+    "\n",
+    "from astroquery.vizier import Vizier\n",
+    "\n",
+    "from IPython.display import clear_output\n",
+    "\n",
+    "import numpy\n",
     "\n",
     "from pathlib import Path\n",
     "\n",
@@ -24,7 +31,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = Path(\"//stem-linux-homes/OSL-Telescope/data/users/Pipeline/PIRATE/\")"
+    "DATA_PATH = Path(\"//stem-linux-homes/OSL-Telescope/data/users/Pipeline/PIRATE/\")\n",
+    "NUM_CALIBRATION_ROWS = 10\n",
+    "CALIBRATION_CATALOGUE = 'I/284/out'\n",
+    "CALIBRATION_CATALOGUE_FIELDS = {\n",
+    "    'B': 'B1mag',\n",
+    "    'R': 'R1mag',\n",
+    "    'I': 'Imag',\n",
+    "}"
    ]
   },
   {
@@ -61,7 +75,7 @@
    "metadata": {},
    "source": [
     "To do:\n",
-    "- Take account of flags\n",
+    "- Take account of flags (maybe don't do this at this step and leave it for later)\n",
     "- Calibration"
    ]
   },
@@ -70,11 +84,30 @@
    "execution_count": 5,
    "id": "28ababc2-2d96-4505-99ef-fbbcaad05afe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[655/659] Processing PIRATE_419624_OSL_00_anm83_HD38451_00_B15_00_2021_10_21_04_34_56_OR_CB_PS\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: MergeConflictWarning: Cannot merge meta key 'null' types <class 'float'> and <class 'float'>, choosing null=nan [astropy.utils.metadata]\n"
+     ]
+    }
+   ],
    "source": [
     "new_dates = [p for p in DATA_PATH.glob('202?_??_??') if p not in processed_dates]\n",
+    "total_dates = len(new_dates)\n",
     "obs_tables = {}\n",
-    "for date in new_dates:\n",
+    "\n",
+    "SPLIT_SIZE = 10\n",
+    "\n",
+    "for date_i, date in enumerate(new_dates):\n",
     "    for catalogue in date.glob('Catalogues/*_anm83_*.cat'):\n",
     "        obs_meta = catalogue.stem.split('_')\n",
     "        obs_meta = {\n",
@@ -94,24 +127,84 @@
     "                coords[obs_meta['name']] = SkyCoord.from_name(obs_meta['name'], parse=True)\n",
     "            except NameResolveError:\n",
     "                continue\n",
+    "        if obs_meta['band'] == 'V':\n",
+    "            # To do: How to handle the lack of V mags in USNO?\n",
+    "            continue\n",
+    "        clear_output(wait=True)\n",
+    "        print(f'[{date_i}/{total_dates}] Processing {catalogue.stem}')\n",
     "        \n",
     "        table = Table.read(catalogue, format='ascii.sextractor')\n",
     "        table.rename_column('ALPHA_J2000', 'RA')\n",
     "        table.rename_column('DELTA_J2000', 'Dec')\n",
     "        \n",
     "        table['separation'] = SkyCoord.guess_from_table(table).separation(coords[obs_meta['name']])\n",
-    "        table.sort('separation')\n",
+    "        table.sort('separation') #To do: use idxmin here instead of sorting\n",
+    "        target_row = table[0]\n",
+    "        \n",
+    "        # Do USNO vizier query for contents of table, then take the closest few matching rows\n",
+    "        # to use for calibration\n",
+    "        \n",
+    "        table.rename_column('RA', '_RAJ2000')\n",
+    "        table.rename_column('Dec', '_DEJ2000')\n",
+    "        Path(f\"data/calibration_tables/{obs_meta['name']}\").mkdir(parents=True, exist_ok=True)\n",
+    "        try:\n",
+    "            calibration_table = Table.read(f\"data/calibration_tables/{obs_meta['name']}/{catalogue.stem}.ecsv\")\n",
+    "        except FileNotFoundError:\n",
+    "            table['flux_diff'] = numpy.abs(table['FLUX_AUTO'] - target_row['FLUX_AUTO'])\n",
+    "            table.sort('flux_diff')\n",
+    "\n",
+    "            calibration_rows = []\n",
+    "\n",
+    "            total_iterations = int(len(table) / SPLIT_SIZE) + 1\n",
+    "            for i in range(total_iterations):\n",
+    "                sources = table[table['FLAGS'] == 0][i * SPLIT_SIZE : (i+1) * SPLIT_SIZE]\n",
+    "                if len(sources) == 0:\n",
+    "                    continue\n",
+    "                sources = vstack([ row for row in sources if row['NUMBER'] != target_row['NUMBER'] ])\n",
+    "                catalogue_results = Vizier.query_region(sources, radius=1e-4*u.deg, catalog=CALIBRATION_CATALOGUE)\n",
+    "                if len(catalogue_results) == 0:\n",
+    "                    continue\n",
+    "\n",
+    "                # Reject any sources with multiple matches\n",
+    "                catalogue_matches = unique(catalogue_results[0], '_q', keep='none')\n",
+    "\n",
+    "                # To do: Reject any known variables\n",
+    "\n",
+    "                for catalogue_row in catalogue_matches:\n",
+    "                    calibration_rows.append(hstack([\n",
+    "                        sources[int(catalogue_row['_q']) - 1],\n",
+    "                        catalogue_row[[CALIBRATION_CATALOGUE_FIELDS[obs_meta['band']]]],\n",
+    "                    ]))\n",
+    "\n",
+    "                if len(calibration_rows) >= NUM_CALIBRATION_ROWS:\n",
+    "                    break\n",
+    "            if len(calibration_rows) < NUM_CALIBRATION_ROWS:\n",
+    "                continue\n",
+    "            calibration_table = vstack(calibration_rows[:NUM_CALIBRATION_ROWS])\n",
+    "            calibration_table.write(f\"data/calibration_tables/{obs_meta['name']}/{catalogue.stem}.ecsv\")\n",
+    "        \n",
+    "        calibrated_mags = calibration_table[CALIBRATION_CATALOGUE_FIELDS[obs_meta['band']]] - 2.5 * numpy.log10(target_row['FLUX_AUTO'] / calibration_table['FLUX_AUTO'])\n",
+    "        \n",
+    "        out_table = Table(target_row)\n",
+    "        # To do: Maybe this should be a weighted average using the flux error?\n",
+    "        out_table.add_columns(\n",
+    "            [\n",
+    "                numpy.mean(calibrated_mags),\n",
+    "                numpy.std(calibrated_mags),\n",
+    "            ],\n",
+    "            names=['calibrated_mag', 'calibrated_mag_err'],\n",
+    "        )\n",
     "        \n",
     "        for key, val in obs_meta.items():\n",
-    "            table[key] = val\n",
+    "            out_table[key] = val\n",
     "        \n",
     "        if obs_meta['name'] not in obs_tables:\n",
     "            try:\n",
     "                obs_tables[obs_meta['name']] = Table.read(f\"data/{obs_meta['name']}.ecsv\")\n",
     "            except FileNotFoundError:\n",
-    "                obs_tables[obs_meta['name']] = table[0]\n",
+    "                obs_tables[obs_meta['name']] = out_table\n",
     "                continue\n",
-    "        obs_tables[obs_meta['name']] = vstack([obs_tables[obs_meta['name']], table[0]])\n",
+    "        obs_tables[obs_meta['name']] = vstack([obs_tables[obs_meta['name']], out_table])\n",
     "        \n",
     "    processed_dates.append(date)"
    ]
@@ -148,6 +241,14 @@
     "with open('data/coords.pickle', 'wb') as coords_file:\n",
     "    pickle.dump(coords, coords_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfa27474-870e-463a-a140-7c9d777bb090",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
