Add option to reprocess existing data

--- a/collate_data.ipynb
+++ b/collate_data.ipynb
@@ -38,7 +38,8 @@
     "    'B': 'B1mag',\n",
     "    'R': 'R1mag',\n",
     "    'I': 'Imag',\n",
-    "}"
+    "}\n",
+    "REPROCESS = False # Set to True to reprocess previous data rather than finding new data"
    ]
   },
   {
@@ -52,7 +53,7 @@
     "    with open('data/processed_dates.pickle', 'rb') as processed_dates_file:\n",
     "        processed_dates = pickle.load(processed_dates_file)\n",
     "except FileNotFoundError:\n",
-    "    processed_dates = []"
+    "    processed_dates = {}"
    ]
   },
   {
@@ -72,24 +73,20 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "179a6a9d-13e7-4add-aea8-c9d21e59df21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if REPROCESS:\n",
+    "    processed_dates = [ d for d, has_data in processed_dates.items() if not has_data ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "28ababc2-2d96-4505-99ef-fbbcaad05afe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[655/659] Processing PIRATE_419624_OSL_00_anm83_HD38451_00_B15_00_2021_10_21_04_34_56_OR_CB_PS\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: MergeConflictWarning: Cannot merge meta key 'null' types <class 'float'> and <class 'float'>, choosing null=nan [astropy.utils.metadata]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_dates = [p for p in DATA_PATH.glob('202?_??_??') if p not in processed_dates]\n",
     "total_dates = len(new_dates)\n",
@@ -98,12 +95,14 @@
     "SPLIT_SIZE = 10\n",
     "\n",
     "for date_i, date in enumerate(new_dates):\n",
+    "    date_has_data = False\n",
     "    for catalogue in date.glob('Catalogues/*_anm83_*.cat'):\n",
+    "        date_has_data = True\n",
     "        obs_meta = catalogue.stem.split('_')\n",
     "        obs_meta = {\n",
     "            'name': obs_meta[5],\n",
     "            'band': obs_meta[7][0],\n",
-    "            'exposure': obs_meta[7][1:],\n",
+    "            'exposure': float(obs_meta[7][1:]),\n",
     "            'timestamp': Time(\n",
     "                dict(zip(\n",
     "                    ['year', 'month', 'day', 'hour', 'minute', 'second'],\n",
@@ -190,18 +189,23 @@
     "        \n",
     "        if obs_meta['name'] not in obs_tables:\n",
     "            try:\n",
-    "                obs_tables[obs_meta['name']] = Table.read(f\"data/{obs_meta['name']}.ecsv\")\n",
+    "                if REPROCESS:\n",
+    "                    obs_tables[obs_meta['name']] = out_table\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    obs_tables[obs_meta['name']] = Table.read(f\"data/{obs_meta['name']}.ecsv\")\n",
     "            except FileNotFoundError:\n",
     "                obs_tables[obs_meta['name']] = out_table\n",
     "                continue\n",
     "        obs_tables[obs_meta['name']] = vstack([obs_tables[obs_meta['name']], out_table])\n",
     "        \n",
-    "    processed_dates.append(date)"
+    "    if not REPROCESS:\n",
+    "        processed_dates[date] = date_has_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "03cc5012-89c8-4a60-99cd-38db9312a047",
    "metadata": {},
    "outputs": [],
@@ -212,18 +216,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "27e2fe8f-c6c6-454d-ac97-460fc5c9fdb7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data/processed_dates.pickle', 'wb') as processed_dates_file:\n",
-    "    pickle.dump(processed_dates, processed_dates_file)"
+    "if not REPROCESS:\n",
+    "    with open('data/processed_dates.pickle', 'wb') as processed_dates_file:\n",
+    "        pickle.dump(processed_dates, processed_dates_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "704b847a-dbc3-4fc2-8ce4-ecf1fe1c6dab",
    "metadata": {},
    "outputs": [],
