Multi-telescope support and exposure time convergence

--- a/collate_data.ipynb
+++ b/collate_data.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = Path(\"//stem-linux-homes/OSL-Telescope/data/users/Pipeline/PIRATE/\")\n",
+    "DATA_PATH = Path(\"//stem-linux-homes/OSL-Telescope/data/users/Pipeline/\")\n",
     "NUM_CALIBRATION_ROWS = 10\n",
     "CALIBRATION_CATALOGUE = 'I/284/out'\n",
     "CALIBRATION_CATALOGUE_FIELDS = {\n",
@@ -39,7 +39,7 @@
     "    'R': 'R1mag',\n",
     "    'I': 'Imag',\n",
     "}\n",
-    "REPROCESS = True # Set to True to reprocess previous data rather than finding new data"
+    "REPROCESS = False # Set to True to reprocess previous data rather than finding new data"
    ]
   },
   {
@@ -91,12 +91,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[31/32] Processing PIRATE_419624_OSL_00_anm83_HD38451_00_B15_00_2021_10_21_04_34_56_OR_CB_PS\n"
+      "[744/748] Processing PIRATE_419624_OSL_00_anm83_HD38451_00_B15_00_2021_10_21_04_34_56_OR_CB_PS\n"
      ]
     }
    ],
    "source": [
-    "new_dates = [p for p in DATA_PATH.glob('202?_??_??') if p not in processed_dates]\n",
+    "new_dates = [p for p in DATA_PATH.glob('*/202?_??_??') if p not in processed_dates]\n",
     "total_dates = len(new_dates)\n",
     "obs_tables = {}\n",
     "\n",
@@ -108,6 +108,7 @@
     "        date_has_data = True\n",
     "        obs_meta = catalogue.stem.split('_')\n",
     "        obs_meta = {\n",
+    "            'telescope': obs_meta[0],\n",
     "            'name': obs_meta[5],\n",
     "            'band': obs_meta[7][0],\n",
     "            'exposure': float(obs_meta[7][1:]),\n",
