--- a/generate_schedule.ipynb
+++ b/generate_schedule.ipynb
@@ -9,7 +9,10 @@
    "source": [
     "from astropy.coordinates import SkyCoord\n",
     "from astropy.table import Table\n",
+    "from astropy import units as u\n",
+    "\n",
     "from IPython.display import display\n",
+    "\n",
     "import csv"
    ]
   },
@@ -20,11 +23,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ALL_FILTERS = ('B', 'V', 'R', 'I')\n",
+    "ALL_FILTERS = {'B', 'V', 'R', 'I'}\n",
     "\n",
     "targets = {\n",
     "    'HD38451': ALL_FILTERS,\n",
     "    '27Cephei': ALL_FILTERS,\n",
+    "}\n",
+    "\n",
+    "all_telescope_filters = {\n",
+    "    'PIRATE': ALL_FILTERS,\n",
+    "    'COAST': {f for f in ALL_FILTERS if f != 'I'},\n",
     "}"
    ]
   },
@@ -36,8 +44,8 @@
    "outputs": [],
    "source": [
     "MAX_FLAG_THRESHOLD = 0.25\n",
-    "DEFAULT_EXPOSURES = range(5, 60, 5)\n",
-    "MIN_EXPOSURES = 5"
+    "MIN_EXPOSURES = 5\n",
+    "DEFAULT_EXPOSURES = range(5, 60, 5)"
    ]
   },
   {
@@ -47,53 +55,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data/schedule_pirate.csv', 'w') as csv_file:\n",
-    "    csv_writer = csv.writer(csv_file)\n",
-    "    csv_writer.writerow((\n",
-    "        'Name', 'RA', 'Dec', 'is timed', 'start time', 'end time',\n",
-    "        'Priority', 'Atoms', 'Binning', 'repeats', 'Max uses', 'Alt limit'\n",
-    "    ))\n",
-    "    for target, filters in targets.items():\n",
-    "        _filters = {}\n",
-    "        for f in filters:\n",
-    "            _filters[f] = []\n",
-    "            for e in DEFAULT_EXPOSURES:\n",
-    "                 _filters[f].append(float(e))\n",
-    "        filters = _filters\n",
-    "        \n",
-    "        try:\n",
-    "            photometry = Table.read(f'data/{target}.ecsv')\n",
-    "            photometry['flagged'] = photometry['FLAGS'] != 0\n",
-    "            for band, group in photometry.to_pandas().groupby('band'):\n",
-    "                pt = group[['exposure', 'flagged']].pivot_table(\n",
-    "                    columns='flagged',\n",
-    "                    index=['exposure'],\n",
-    "                    aggfunc=lambda x: len(x),\n",
-    "                    fill_value=0,\n",
-    "                )\n",
-    "                pt['total'] = pt[True] + pt[False]\n",
-    "                pt['frac'] = pt[True] / pt['total']\n",
-    "                \n",
-    "                flagged_exposures = pt[(pt['total'] >= MIN_EXPOSURES) & (pt['frac'] >= MAX_FLAG_THRESHOLD)].index\n",
-    "                if len(flagged_exposures) > 0:\n",
-    "                    min_flagged_exposure = pt[(pt['total'] >= MIN_EXPOSURES) & (pt['frac'] >= MAX_FLAG_THRESHOLD)].index.min()\n",
-    "                    filters[band] = [e for e in filters[band] if e < min_flagged_exposure]\n",
-    "                    filters[band] = [max(filters[band])]\n",
-    "        except FileNotFoundError:\n",
-    "            pass\n",
+    "for telescope, telescope_filters in all_telescope_filters.items():\n",
+    "    with open(f'data/schedule_{telescope}.csv', 'w') as csv_file:\n",
+    "        csv_writer = csv.writer(csv_file)\n",
+    "        csv_writer.writerow((\n",
+    "            'Name', 'RA', 'Dec', 'is timed', 'start time', 'end time',\n",
+    "            'Priority', 'Atoms', 'Binning', 'repeats', 'Max uses', 'Alt limit'\n",
+    "        ))\n",
+    "        for target, filters in targets.items():\n",
+    "            filters = filters & all_telescope_filters[telescope]\n",
+    "            _filters = {}\n",
+    "            for f in filters:\n",
+    "                _filters[f] = []\n",
+    "                for e in DEFAULT_EXPOSURES:\n",
+    "                     _filters[f].append(float(e))\n",
+    "            filters = _filters\n",
     "\n",
-    "        coords = SkyCoord.from_name(target, parse=True)\n",
-    "        atoms = []\n",
-    "        for f, es in filters.items():\n",
-    "            for e in es[len(es)-3:]:\n",
-    "                atoms.append(f'{f}:{e}')\n",
-    "        atoms = ';'.join(atoms)\n",
+    "            try:\n",
+    "                photometry = Table.read(f'data/{target}.ecsv')\n",
+    "                photometry = photometry[photometry['telescope'] == telescope]\n",
+    "                photometry['flagged'] = photometry['FLAGS'] != 0\n",
+    "                for band, group in photometry.to_pandas().groupby('band'):\n",
+    "                    pt = group[['exposure', 'flagged']].pivot_table(\n",
+    "                        columns='flagged',\n",
+    "                        index=['exposure'],\n",
+    "                        aggfunc=lambda x: len(x),\n",
+    "                        fill_value=0,\n",
+    "                    )\n",
+    "                    pt['total'] = pt[True] + pt[False]\n",
+    "                    pt['frac'] = pt[True] / pt['total']\n",
     "\n",
-    "        csv_writer.writerow([\n",
-    "            target, coords.ra.to_string(alwayssign=True, sep=':'),\n",
-    "            coords.dec.to_string(alwayssign=True, sep=':'), 'FALSE', '',\n",
-    "            '', '500', atoms, '1', '1', '3', '20',\n",
-    "        ])"
+    "                    flagged_exposures = pt[(pt['total'] >= MIN_EXPOSURES) & (pt['frac'] >= MAX_FLAG_THRESHOLD)].index\n",
+    "                    if len(flagged_exposures) > 0:\n",
+    "                        min_flagged_exposure = flagged_exposures.min()\n",
+    "                        filters[band] = [e for e in filters[band] if e < min_flagged_exposure]\n",
+    "                        \n",
+    "                    successful_exposures = pt[(pt['total'] >= MIN_EXPOSURES) & (pt['frac'] < MAX_FLAG_THRESHOLD)].index\n",
+    "                    if len(successful_exposures) > 0:\n",
+    "                        max_successful_exposure = successful_exposures.max()\n",
+    "                        filters[band] = [e for e in filters[band] if e >= max_successful_exposure]\n",
+    "            except FileNotFoundError:\n",
+    "                pass\n",
+    "\n",
+    "            coords = SkyCoord.from_name(target, parse=True)\n",
+    "            atoms = []\n",
+    "            for f, es in filters.items():\n",
+    "                for e in {es[0], es[int(len(es)/2)], es[-1]}: \n",
+    "                    # Take the unique lowest, middle, and highest exposure times\n",
+    "                    atoms.append(f'{f}:{e}')\n",
+    "            atoms = ';'.join(atoms)\n",
+    "            csv_writer.writerow([\n",
+    "                target, coords.ra.to_string(alwayssign=True, sep=':', unit=u.hour),\n",
+    "                coords.dec.to_string(alwayssign=True, sep=':'), 'FALSE', '',\n",
+    "                '', '500', atoms, '1', '1', '3', '20',\n",
+    "            ])"
    ]
   }
  ],
