--- a/generate_schedule.ipynb
+++ b/generate_schedule.ipynb
@@ -51,6 +51,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "f73765db-48fd-4655-95a5-af210ad429eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PRIORITY = 1000\n",
+    "BINNING = 1\n",
+    "REPEATS = 1\n",
+    "MAX_USES = 3\n",
+    "ALT = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "65fb63ec-eab3-4ff8-9289-8d83658d7924",
    "metadata": {},
    "outputs": [],
@@ -107,7 +121,7 @@
     "            csv_writer.writerow([\n",
     "                target, coords.ra.to_string(alwayssign=True, sep=':', unit=u.hour),\n",
     "                coords.dec.to_string(alwayssign=True, sep=':'), 'FALSE', '',\n",
-    "                '', '500', atoms, '1', '1', '3', '20',\n",
+    "                '', PRIORITY, atoms, BINNING, REPEATS, MAX_USES, ALT,\n",
     "            ])"
    ]
   }
