Fix missing columns in pivot table

--- a/generate_schedule.ipynb
+++ b/generate_schedule.ipynb
@@ -96,6 +96,10 @@
     "                        aggfunc=lambda x: len(x),\n",
     "                        fill_value=0,\n",
     "                    )\n",
+    "                    if True not in pt:\n",
+    "                        pt[True] = 0\n",
+    "                    if False not in pt:\n",
+    "                        pt[False] = 0\n",
     "                    pt['total'] = pt[True] + pt[False]\n",
     "                    pt['frac'] = pt[True] / pt['total']\n",
     "\n",
