--- a/generate_schedule.ipynb
+++ b/generate_schedule.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "MAX_FLAG_THRESHOLD = 0.25\n",
     "MIN_EXPOSURES = 5\n",
-    "DEFAULT_EXPOSURES = range(5, 60, 5)"
+    "DEFAULT_EXPOSURES = list(range(1, 5)) + list(range(5, 60, 5))"
    ]
   },
   {
