Add some SuperWASP targets to check calibrations

--- a/generate_schedule.ipynb
+++ b/generate_schedule.ipynb
@@ -28,6 +28,10 @@
     "targets = {\n",
     "    'HD38451': ALL_FILTERS,\n",
     "    '27Cephei': ALL_FILTERS,\n",
+    "    '1SWASPJ002552.75+454445.3': ALL_FILTERS,\n",
+    "    '1SWASPJ002552.88+454558.7': ALL_FILTERS,\n",
+    "    '1SWASPJ184559.85+471858.4': ALL_FILTERS,\n",
+    "    '1SWASPJ002551.12+454523.8': ALL_FILTERS,\n",
     "}\n",
     "\n",
     "all_telescope_filters = {\n",
