Use flux difference and separation...
...when choosing reference stars.

Also handle escaping of object names.

--- a/generate_schedule.ipynb
+++ b/generate_schedule.ipynb
@@ -13,36 +13,14 @@
     "\n",
     "from IPython.display import display\n",
     "\n",
-    "import csv"
+    "import csv\n",
+    "\n",
+    "from targets import TARGETS, ALL_TELESCOPE_FILTERS"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6d66c1c7-573b-435a-b5c8-0a170966c760",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ALL_FILTERS = {'B', 'V', 'R', 'I'}\n",
-    "\n",
-    "targets = {\n",
-    "    'HD38451': ALL_FILTERS,\n",
-    "    '27Cephei': ALL_FILTERS,\n",
-    "    '1SWASPJ002552.75+454445.3': ALL_FILTERS,\n",
-    "    '1SWASPJ002552.88+454558.7': ALL_FILTERS,\n",
-    "    '1SWASPJ184559.85+471858.4': ALL_FILTERS,\n",
-    "    '1SWASPJ002551.12+454523.8': ALL_FILTERS,\n",
-    "}\n",
-    "\n",
-    "all_telescope_filters = {\n",
-    "    'PIRATE': ALL_FILTERS,\n",
-    "    'COAST': {f for f in ALL_FILTERS if f != 'I'},\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "1f578116-9be2-4c01-bf8a-4197d9ccbbb2",
    "metadata": {},
    "outputs": [],
@@ -54,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f73765db-48fd-4655-95a5-af210ad429eb",
    "metadata": {},
    "outputs": [],
@@ -68,20 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "65fb63ec-eab3-4ff8-9289-8d83658d7924",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for telescope, telescope_filters in all_telescope_filters.items():\n",
+    "for telescope, telescope_filters in ALL_TELESCOPE_FILTERS.items():\n",
     "    with open(f'data/schedule_{telescope}.csv', 'w') as csv_file:\n",
     "        csv_writer = csv.writer(csv_file)\n",
     "        csv_writer.writerow((\n",
     "            'Name', 'RA', 'Dec', 'is timed', 'start time', 'end time',\n",
     "            'Priority', 'Atoms', 'Binning', 'repeats', 'Max uses', 'Alt limit'\n",
     "        ))\n",
-    "        for target, filters in targets.items():\n",
-    "            filters = filters & all_telescope_filters[telescope]\n",
+    "        for target, filters in TARGETS.items():\n",
+    "            filters = filters & ALL_TELESCOPE_FILTERS[telescope]\n",
     "            _filters = {}\n",
     "            for f in filters:\n",
     "                _filters[f] = []\n",
