--- a/collate_data.ipynb
+++ b/collate_data.ipynb
@@ -19,9 +19,14 @@
     "\n",
     "import numpy\n",
     "\n",
+    "from scipy.spatial.distance import cdist\n",
+    "\n",
     "from pathlib import Path\n",
     "\n",
-    "import pickle"
+    "import itertools\n",
+    "import pickle\n",
+    "\n",
+    "from targets import ESCAPED_TARGET_NAMES"
    ]
   },
   {
@@ -91,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[748/752] Processing PIRATE_419624_OSL_00_anm83_HD38451_00_B15_00_2021_10_21_04_34_56_OR_CB_PS\n"
+      "[1/3] Processing COAST_512458_OSL_00_anm83_HD38451_00_V55_00_2021_11_01_05_36_48_OR_CB_PS\n"
      ]
     }
    ],
@@ -106,16 +111,23 @@
     "    date_has_data = False\n",
     "    for catalogue in date.glob('Catalogues/*_anm83_*.cat'):\n",
     "        date_has_data = True\n",
-    "        obs_meta = catalogue.stem.split('_')\n",
+    "        name = None\n",
+    "        for escaped_target_name, target_name in ESCAPED_TARGET_NAMES.items():\n",
+    "            if escaped_target_name in catalogue.stem:\n",
+    "                name = target_name\n",
+    "                obs_meta = list(itertools.chain.from_iterable(l.split('_') for l in catalogue.stem.split(f'_{escaped_target_name}_')))\n",
+    "                break\n",
+    "        if name is None:\n",
+    "            continue\n",
     "        obs_meta = {\n",
     "            'telescope': obs_meta[0],\n",
-    "            'name': obs_meta[5],\n",
-    "            'band': obs_meta[7][0],\n",
-    "            'exposure': float(obs_meta[7][1:]),\n",
+    "            'name': name,\n",
+    "            'band': obs_meta[6][0],\n",
+    "            'exposure': float(obs_meta[6][1:]),\n",
     "            'timestamp': Time(\n",
     "                dict(zip(\n",
     "                    ['year', 'month', 'day', 'hour', 'minute', 'second'],\n",
-    "                    map(int, obs_meta[9:15])\n",
+    "                    map(int, obs_meta[8:14])\n",
     "                )),\n",
     "                format='ymdhms',\n",
     "            ).jd,\n",
@@ -147,14 +159,27 @@
     "            try:\n",
     "                calibration_table = Table.read(f\"data/calibration_tables/{obs_meta['name']}/{catalogue.stem}.ecsv\")\n",
     "            except FileNotFoundError:\n",
+    "                table = table[table['FLAGS'] == 0]\n",
     "                table['flux_diff'] = numpy.abs(table['FLUX_AUTO'] - target_row['FLUX_AUTO'])\n",
     "                table.sort('flux_diff')\n",
+    "                table = table[:50]\n",
+    "                table.sort('separation')\n",
+    "                \n",
+    "                #max_sep = table['separation'].max()\n",
+    "                #max_flux_diff = table['flux_diff'].max()\n",
+    "                #max_flux_err = table['FLUXERR_AUTO'].max()\n",
+    "                #table['calibration_dist'] = numpy.sqrt(\n",
+    "                #    (table['separation']/max_sep)**2 \n",
+    "                #    + (table['flux_diff']/max_flux_diff)**2\n",
+    "                #    + (table['FLUXERR_AUTO']/max_flux_err)**2\n",
+    "                #)\n",
+    "                #table.sort('calibration_dist')\n",
     "\n",
     "                calibration_rows = []\n",
     "\n",
     "                total_iterations = int(len(table) / SPLIT_SIZE) + 1\n",
     "                for i in range(total_iterations):\n",
-    "                    sources = table[table['FLAGS'] == 0][i * SPLIT_SIZE : (i+1) * SPLIT_SIZE]\n",
+    "                    sources = table[i * SPLIT_SIZE : (i+1) * SPLIT_SIZE]\n",
     "                    if len(sources) == 0:\n",
     "                        continue\n",
     "                    sources = vstack([ row for row in sources if row['NUMBER'] != target_row['NUMBER'] ])\n",
@@ -178,7 +203,10 @@
     "                if len(calibration_rows) < NUM_CALIBRATION_ROWS:\n",
     "                    continue\n",
     "                calibration_table = vstack(calibration_rows[:NUM_CALIBRATION_ROWS])\n",
-    "                calibration_table.write(f\"data/calibration_tables/{obs_meta['name']}/{catalogue.stem}.ecsv\")\n",
+    "                calibration_table.write(\n",
+    "                    f\"data/calibration_tables/{obs_meta['name']}/{catalogue.stem}.ecsv\",\n",
+    "                    overwrite=True,\n",
+    "                )\n",
     "\n",
     "            calibrated_mags = (\n",
     "                calibration_table[CALIBRATION_CATALOGUE_FIELDS[obs_meta['band']]] \n",
@@ -189,7 +217,8 @@
     "            out_table.add_columns(\n",
     "                [\n",
     "                    numpy.mean(calibrated_mags),\n",
-    "                    numpy.std(calibrated_mags),\n",
+    "                    # Standard error as per https://www.statology.org/standard-error-of-mean-python/\n",
+    "                    numpy.std(calibrated_mags, ddof=1) / numpy.sqrt(numpy.size(calibrated_mags)),\n",
     "                ],\n",
     "                names=['calibrated_mag', 'calibrated_mag_err'],\n",
     "            )\n",
