Add tqdm progress bar

--- a/collate_data.ipynb
+++ b/collate_data.ipynb
@@ -15,11 +15,10 @@
     "\n",
     "from astroquery.vizier import Vizier\n",
     "\n",
-    "from IPython.display import clear_output\n",
-    "\n",
     "import numpy\n",
     "\n",
     "from scipy.spatial.distance import cdist\n",
+    "from tqdm.notebook import tqdm\n",
     "\n",
     "from pathlib import Path\n",
     "\n",
@@ -93,11 +92,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1/3] Processing COAST_512458_OSL_00_anm83_HD38451_00_V55_00_2021_11_01_05_36_48_OR_CB_PS\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3228c434987447e9a1a020bcba43826b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -107,7 +113,7 @@
     "\n",
     "SPLIT_SIZE = 10\n",
     "\n",
-    "for date_i, date in enumerate(new_dates):\n",
+    "for date in tqdm(new_dates):\n",
     "    date_has_data = False\n",
     "    for catalogue in date.glob('Catalogues/*_anm83_*.cat'):\n",
     "        date_has_data = True\n",
@@ -137,8 +143,6 @@
     "                coords[obs_meta['name']] = SkyCoord.from_name(obs_meta['name'], parse=True)\n",
     "            except NameResolveError:\n",
     "                continue\n",
-    "        clear_output(wait=True)\n",
-    "        print(f'[{date_i}/{total_dates}] Processing {catalogue.stem}')\n",
     "        \n",
     "        table = Table.read(catalogue, format='ascii.sextractor')\n",
     "        table.rename_column('ALPHA_J2000', 'RA')\n",
