Allow longer exposures up to ~10 mins

--- a/generate_schedule.ipynb
+++ b/generate_schedule.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "MAX_FLAG_THRESHOLD = 0.25\n",
     "MIN_EXPOSURES = 5\n",
-    "DEFAULT_EXPOSURES = list(range(1, 5)) + list(range(5, 60, 5))"
+    "DEFAULT_EXPOSURES = list(range(1, 5)) + list(range(5, 60, 5)) + list(range(60, 600, 60))"
    ]
   },
   {
