Progress bars and refine flag filtering to just remove saturation when calculating schedules

--- a/collate_data.ipynb
+++ b/collate_data.ipynb
@@ -94,12 +94,96 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3228c434987447e9a1a020bcba43826b",
+       "model_id": "da1af68927b84f9f838ee9954f8e5bb1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "0it [00:00, ?it/s]"
+       "New dates:   0%|          | 0/6 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8108a35fa2da411fbad0ae83ce21c551",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "\\\\stem-linux-homes\\OSL-Telescope\\data\\users\\Pipeline\\COAST\\2021_11_02:   0%|          | 0/6 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "48ef3f51ad7f4f90ab03777a0544ef54",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "\\\\stem-linux-homes\\OSL-Telescope\\data\\users\\Pipeline\\PIRATE\\2021_11_02:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d5642ac295144a02ba1bfc25055fb7ae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "\\\\stem-linux-homes\\OSL-Telescope\\data\\users\\Pipeline\\PIRATE\\2021_10_30:   0%|          | 0/40 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "49ed886dd5664622bedc322cfd9c7369",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "\\\\stem-linux-homes\\OSL-Telescope\\data\\users\\Pipeline\\PIRATE\\2021_11_01:   0%|          | 0/74 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ba25c5a1fdd443ab5ec95c898e078d5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "\\\\stem-linux-homes\\OSL-Telescope\\data\\users\\Pipeline\\PIRATE\\2021_10_29:   0%|          | 0/54 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "faadee1150f74bdb9d69e2053387e585",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "\\\\stem-linux-homes\\OSL-Telescope\\data\\users\\Pipeline\\PIRATE\\2021_10_31:   0%|          | 0/44 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -113,9 +197,9 @@
     "\n",
     "SPLIT_SIZE = 10\n",
     "\n",
-    "for date in tqdm(new_dates):\n",
+    "for date in tqdm(new_dates, desc='New dates'):\n",
     "    date_has_data = False\n",
-    "    for catalogue in date.glob('Catalogues/*_anm83_*.cat'):\n",
+    "    for catalogue in tqdm(list(date.glob('Catalogues/*_anm83_*.cat')), desc=str(date)):\n",
     "        date_has_data = True\n",
     "        name = None\n",
     "        for escaped_target_name, target_name in ESCAPED_TARGET_NAMES.items():\n",
@@ -206,7 +290,7 @@
     "                        break\n",
     "                if len(calibration_rows) < NUM_CALIBRATION_ROWS:\n",
     "                    continue\n",
-    "                calibration_table = vstack(calibration_rows[:NUM_CALIBRATION_ROWS])\n",
+    "                calibration_table = vstack(calibration_rows[:NUM_CALIBRATION_ROWS], metadata_conflicts='silent')\n",
     "                calibration_table.write(\n",
     "                    f\"data/calibration_tables/{obs_meta['name']}/{catalogue.stem}.ecsv\",\n",
     "                    overwrite=True,\n",
