--- a/generate_schedule.ipynb
+++ b/generate_schedule.ipynb
@@ -70,7 +70,7 @@
     "            try:\n",
     "                photometry = Table.read(f'data/{target}.ecsv')\n",
     "                photometry = photometry[photometry['telescope'] == telescope]\n",
-    "                photometry['flagged'] = photometry['FLAGS'] != 0\n",
+    "                photometry['flagged'] = (photometry['FLAGS'] & 4) != 0 # In this case we only care about saturation\n",
     "                for band, group in photometry.to_pandas().groupby('band'):\n",
     "                    pt = group[['exposure', 'flagged']].pivot_table(\n",
     "                        columns='flagged',\n",
