Add folded plots

--- a/generate_schedule.ipynb
+++ b/generate_schedule.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "import csv\n",
     "\n",
-    "from targets import TARGETS, ALL_TELESCOPE_FILTERS"
+    "from targets import TARGETS, ALL_TELESCOPE_FILTERS, ALL_FILTERS"
    ]
   },
   {
@@ -58,7 +58,8 @@
     "            'Name', 'RA', 'Dec', 'is timed', 'start time', 'end time',\n",
     "            'Priority', 'Atoms', 'Binning', 'repeats', 'Max uses', 'Alt limit'\n",
     "        ))\n",
-    "        for target, filters in TARGETS.items():\n",
+    "        for target, config in TARGETS.items():\n",
+    "            filters = config.get('filters', ALL_FILTERS)\n",
     "            filters = filters & ALL_TELESCOPE_FILTERS[telescope]\n",
     "            _filters = {}\n",
     "            for f in filters:\n",
